force-app/main/default/objects/Invoice__c/validationRules/Deferred_Opportunity_is_true.validationRule-meta.xml
<ValidationRule>
    <fullName>Deferred_Opportunity_is_true</fullName>
    <active>true</active>
    <description>When Deferred Opportunity checkbox is true no Invoice can be generated</description>
    <errorConditionFormula>IF( RecordType.Name == &apos;Invoice&apos;,
IF(Defer_Opportunity__c == True , true , false),false)</errorConditionFormula>
    <errorMessage>Invoice Cannot be Generated when Opportunity Billing Status is Deferred or Hold or INC or Exit</errorMessage>
</ValidationRule>