force-app/main/default/objects/Invoice__c/validationRules/Invoice_Creation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Creation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
	ISNEW(),
	$RecordType.DeveloperName=&apos;Invoice&apos;,
	Bypass_Validation__c=false,
				 OR(
									AND(	NOT(ISPICKVAL(Opportunity_Name__r.Defer_Billing_or_Exit_Case__c, &apos;To Be Billed&apos;))),
									NOT(ISPICKVAL(Opportunity_Name__r.StageName , &apos;Closed Won&apos;))) 
    )</errorConditionFormula>
    <errorMessage>An invoice can only be generated when the opportunity is &apos;Closed Won&apos; and the Billing Status of the opportunity is &apos;To Be Billed&apos;</errorMessage>
</ValidationRule>