force-app/main/default/objects/Invoice__c/validationRules/No_Negative_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Negative_Value</fullName>
    <active>true</active>
    <description>To restrict the negative value for a field</description>
    <errorConditionFormula>Currency_Exchange_Rate__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Currency_Exchange_Rate__c</errorDisplayField>
    <errorMessage>The Currency Exchange Rate field cannot have a negative value.</errorMessage>
</ValidationRule>