force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Bill_No__c</columns>
    <columns>Total_GST_Amount__c</columns>
    <columns>Total_Invoice_Amount_Copy__c</columns>
    <columns>Total_Credit_Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Invoice_Created_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Invoice_Amount__c</columns>
    <columns>IRN_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>