force-app/main/default/objects/Invoice__c/listViews/Credit_Note.listView-meta.xml
<ListView>
    <fullName>Credit_Note</fullName>
    <columns>NAME</columns>
    <columns>Credit_Note_Type__c</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Credit_Note__c</columns>
    <columns>Total_GST_Amount__c</columns>
    <columns>Total_Credit_Amount__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Credit Note</label>
</ListView>